x103b_check_log.txt
[2026-05-21T21:54:12.6064946+07:00] START X103B check
{
    "release":  "X103B_DISPATCHER_BOM_REPAIR_CHECK",
    "dispatcher":  "D:\\openwebui\\core\\x87_worker_dispatcher.py",
    "starts_with_utf8_bom":  false,
    "has_nul_byte":  false,
    "compile_ok":  false,
    "x103_hook_still_present":  true,
    "compile_output":  "D:\\openwebui\\runtime\\temp\\x103b_check_compile_output.txt",
    "ok":  false
}
[FAIL] X103B check failed
python :   File "D:\openwebui\core\x87_worker_dispatcher.py", line 5
At D:\openwebui\_patch_inbox\x103b_dispatcher_bom_repair\x103b_dispatcher_bom_repair_check.ps1:19 char:1
+ python -m py_compile $Dispatcher *> $CompileOutput
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "D:\open...her.py", line 5:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file

